[package]
name = "rust_lib_moniz"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
color-eyre = "0.6.2"
flutter_rust_bridge = "=2.0.0-dev.28"
image_compressor = "1.5.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rimage = { version = "*", features = ["jxl"] }
image = "0.25.1"
